--- a/CleanedByBR/SpeedFromCrankAngle.html
+++ b/CleanedByBR/SpeedFromCrankAngle.html
@@ -21,7 +21,7 @@
             <img src="SpeedFromCrankAngle.png" alt = "" width = "" style = ""/>
             <!-- Inserts MD file converted to HTML -->
             <zero-md src="SpeedFromCrankAngle.md"></zero-md> 
-            <p><p><b>Individual Test Run Plots:</b><p><a href="R08\SpeedFromDistance.html">Test Run - R08: 80mmDisc</a><br><a href="R08\SpeedFromCrankAngle.html">Test Run - R08: 80mmDisc</a><br></p>
+            <p><p><b>Individual Test Run Plots:</b><p><a href="R03\SpeedFromDistance.html">Test Run - R03: Baseline</a><br><a href="R08\SpeedFromDistance.html">Test Run - R08: 80mmDisc</a><br><a href="R03\SpeedFromCrankAngle.html">Test Run - R03: Baseline</a><br><a href="R08\SpeedFromCrankAngle.html">Test Run - R08: 80mmDisc</a><br></p>
             <p><a href="javascript:history.back()">...Go Back</a></p>               
         </body>
     </html>
