--- a/CleanedByBR/DataCleaned.html
+++ b/CleanedByBR/DataCleaned.html
@@ -20,461 +20,69 @@
             <table border="1" class="dataframe mystyle">
   <thead>
     <tr style="text-align: center;">
-      <th></th>
       <th>Test Run</th>
       <th>Metric</th>
       <th>Avg Before Clean</th>
       <th>Avg After Clean</th>
+      <th>Diff (%)</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th>0</th>
-      <td>R03</td>
-      <td>Power</td>
-      <td>264.4400</td>
-      <td>264.4400</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>R04</td>
-      <td>Power</td>
-      <td>261.0600</td>
-      <td>261.0600</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>R05</td>
-      <td>Power</td>
-      <td>263.7700</td>
-      <td>263.7700</td>
-    </tr>
-    <tr>
-      <th>3</th>
-      <td>R06</td>
-      <td>Power</td>
-      <td>280.8400</td>
-      <td>280.8300</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td>R07</td>
-      <td>Power</td>
-      <td>260.5700</td>
-      <td>260.5700</td>
-    </tr>
-    <tr>
-      <th>5</th>
-      <td>R08</td>
-      <td>Power</td>
-      <td>277.0200</td>
-      <td>277.0100</td>
-    </tr>
-    <tr>
-      <th>6</th>
-      <td>R09</td>
-      <td>Power</td>
-      <td>280.8100</td>
-      <td>280.8200</td>
-    </tr>
-    <tr>
-      <th>7</th>
       <td>R10</td>
       <td>Power</td>
       <td>264.0300</td>
       <td>266.4100</td>
+      <td>0.89</td>
     </tr>
     <tr>
-      <th>8</th>
-      <td>R03</td>
-      <td>Ground Speed</td>
-      <td>11.3100</td>
-      <td>11.3100</td>
-    </tr>
-    <tr>
-      <th>9</th>
-      <td>R04</td>
-      <td>Ground Speed</td>
-      <td>11.3000</td>
-      <td>11.3000</td>
-    </tr>
-    <tr>
-      <th>10</th>
       <td>R05</td>
       <td>Ground Speed</td>
       <td>11.2400</td>
       <td>11.2500</td>
+      <td>0.09</td>
     </tr>
     <tr>
-      <th>11</th>
       <td>R06</td>
       <td>Ground Speed</td>
       <td>11.4300</td>
       <td>11.4200</td>
+      <td>0.09</td>
     </tr>
     <tr>
-      <th>12</th>
       <td>R07</td>
       <td>Ground Speed</td>
       <td>11.1200</td>
       <td>11.1300</td>
+      <td>0.09</td>
     </tr>
     <tr>
-      <th>13</th>
-      <td>R08</td>
-      <td>Ground Speed</td>
-      <td>11.2600</td>
-      <td>11.2600</td>
-    </tr>
-    <tr>
-      <th>14</th>
-      <td>R09</td>
-      <td>Ground Speed</td>
-      <td>11.2400</td>
-      <td>11.2400</td>
-    </tr>
-    <tr>
-      <th>15</th>
-      <td>R10</td>
-      <td>Ground Speed</td>
-      <td>11.1500</td>
-      <td>11.1500</td>
-    </tr>
-    <tr>
-      <th>16</th>
-      <td>R03</td>
-      <td>Air Speed</td>
-      <td>11.2400</td>
-      <td>11.2400</td>
-    </tr>
-    <tr>
-      <th>17</th>
-      <td>R04</td>
-      <td>Air Speed</td>
-      <td>11.2300</td>
-      <td>11.2300</td>
-    </tr>
-    <tr>
-      <th>18</th>
-      <td>R05</td>
-      <td>Air Speed</td>
-      <td>11.1500</td>
-      <td>11.1500</td>
-    </tr>
-    <tr>
-      <th>19</th>
-      <td>R06</td>
-      <td>Air Speed</td>
-      <td>11.3800</td>
-      <td>11.3800</td>
-    </tr>
-    <tr>
-      <th>20</th>
-      <td>R07</td>
-      <td>Air Speed</td>
-      <td>10.9900</td>
-      <td>10.9900</td>
-    </tr>
-    <tr>
-      <th>21</th>
-      <td>R08</td>
-      <td>Air Speed</td>
-      <td>11.1200</td>
-      <td>11.1200</td>
-    </tr>
-    <tr>
-      <th>22</th>
-      <td>R09</td>
-      <td>Air Speed</td>
-      <td>11.1400</td>
-      <td>11.1400</td>
-    </tr>
-    <tr>
-      <th>23</th>
-      <td>R10</td>
-      <td>Air Speed</td>
-      <td>11.1800</td>
-      <td>11.1800</td>
-    </tr>
-    <tr>
-      <th>24</th>
-      <td>R03</td>
-      <td>Cadence</td>
-      <td>96.9000</td>
-      <td>96.8900</td>
-    </tr>
-    <tr>
-      <th>25</th>
-      <td>R04</td>
-      <td>Cadence</td>
-      <td>96.8400</td>
-      <td>96.8300</td>
-    </tr>
-    <tr>
-      <th>26</th>
-      <td>R05</td>
-      <td>Cadence</td>
-      <td>96.3100</td>
-      <td>96.2900</td>
-    </tr>
-    <tr>
-      <th>27</th>
-      <td>R06</td>
-      <td>Cadence</td>
-      <td>97.8800</td>
-      <td>97.8700</td>
-    </tr>
-    <tr>
-      <th>28</th>
-      <td>R07</td>
-      <td>Cadence</td>
-      <td>95.2700</td>
-      <td>95.2700</td>
-    </tr>
-    <tr>
-      <th>29</th>
-      <td>R08</td>
-      <td>Cadence</td>
-      <td>96.4700</td>
-      <td>96.4400</td>
-    </tr>
-    <tr>
-      <th>30</th>
-      <td>R09</td>
-      <td>Cadence</td>
-      <td>96.3100</td>
-      <td>96.2800</td>
-    </tr>
-    <tr>
-      <th>31</th>
-      <td>R10</td>
-      <td>Cadence</td>
-      <td>101.8900</td>
-      <td>101.8600</td>
-    </tr>
-    <tr>
-      <th>32</th>
-      <td>R03</td>
-      <td>CdA</td>
-      <td>0.1780</td>
-      <td>0.1780</td>
-    </tr>
-    <tr>
-      <th>33</th>
-      <td>R04</td>
-      <td>CdA</td>
-      <td>0.1721</td>
-      <td>0.1721</td>
-    </tr>
-    <tr>
-      <th>34</th>
-      <td>R05</td>
-      <td>CdA</td>
-      <td>0.1763</td>
-      <td>0.1763</td>
-    </tr>
-    <tr>
-      <th>35</th>
-      <td>R06</td>
-      <td>CdA</td>
-      <td>0.1823</td>
-      <td>0.1823</td>
-    </tr>
-    <tr>
-      <th>36</th>
-      <td>R07</td>
-      <td>CdA</td>
-      <td>0.1861</td>
-      <td>0.1861</td>
-    </tr>
-    <tr>
-      <th>37</th>
-      <td>R08</td>
-      <td>CdA</td>
-      <td>0.1989</td>
-      <td>0.1989</td>
-    </tr>
-    <tr>
-      <th>38</th>
-      <td>R09</td>
-      <td>CdA</td>
-      <td>0.2087</td>
-      <td>0.2087</td>
-    </tr>
-    <tr>
-      <th>39</th>
       <td>R10</td>
       <td>CdA</td>
       <td>0.1705</td>
       <td>0.1706</td>
+      <td>0.06</td>
     </tr>
     <tr>
-      <th>40</th>
-      <td>R03</td>
-      <td>Drag</td>
-      <td>-13.4145</td>
-      <td>-13.4147</td>
-    </tr>
-    <tr>
-      <th>41</th>
       <td>R04</td>
       <td>Drag</td>
       <td>-12.9028</td>
       <td>-12.9121</td>
+      <td>0.07</td>
     </tr>
     <tr>
-      <th>42</th>
-      <td>R05</td>
-      <td>Drag</td>
-      <td>-12.9888</td>
-      <td>-12.9887</td>
-    </tr>
-    <tr>
-      <th>43</th>
-      <td>R06</td>
-      <td>Drag</td>
-      <td>-14.0008</td>
-      <td>-14.0006</td>
-    </tr>
-    <tr>
-      <th>44</th>
-      <td>R07</td>
-      <td>Drag</td>
-      <td>-13.2992</td>
-      <td>-13.2992</td>
-    </tr>
-    <tr>
-      <th>45</th>
-      <td>R08</td>
-      <td>Drag</td>
-      <td>-14.7832</td>
-      <td>-14.7828</td>
-    </tr>
-    <tr>
-      <th>46</th>
       <td>R09</td>
       <td>Drag</td>
       <td>-15.4550</td>
       <td>-15.4426</td>
+      <td>0.08</td>
     </tr>
     <tr>
-      <th>47</th>
       <td>R10</td>
       <td>Drag</td>
       <td>-12.5491</td>
       <td>-12.5574</td>
-    </tr>
-    <tr>
-      <th>48</th>
-      <td>R03</td>
-      <td>Total Weight</td>
-      <td>84675.5923</td>
-      <td>84665.2080</td>
-    </tr>
-    <tr>
-      <th>49</th>
-      <td>R04</td>
-      <td>Total Weight</td>
-      <td>84793.4032</td>
-      <td>84796.9851</td>
-    </tr>
-    <tr>
-      <th>50</th>
-      <td>R05</td>
-      <td>Total Weight</td>
-      <td>84795.6759</td>
-      <td>84808.8864</td>
-    </tr>
-    <tr>
-      <th>51</th>
-      <td>R06</td>
-      <td>Total Weight</td>
-      <td>85169.3365</td>
-      <td>85183.3799</td>
-    </tr>
-    <tr>
-      <th>52</th>
-      <td>R07</td>
-      <td>Total Weight</td>
-      <td>84708.2688</td>
-      <td>84703.0893</td>
-    </tr>
-    <tr>
-      <th>53</th>
-      <td>R08</td>
-      <td>Total Weight</td>
-      <td>85016.4602</td>
-      <td>85007.2485</td>
-    </tr>
-    <tr>
-      <th>54</th>
-      <td>R09</td>
-      <td>Total Weight</td>
-      <td>85007.4008</td>
-      <td>85003.1149</td>
-    </tr>
-    <tr>
-      <th>55</th>
-      <td>R10</td>
-      <td>Total Weight</td>
-      <td>84986.7860</td>
-      <td>84989.8027</td>
-    </tr>
-    <tr>
-      <th>56</th>
-      <td>R03</td>
-      <td>Crank Angle Delta</td>
-      <td>5.8200</td>
-      <td>5.8200</td>
-    </tr>
-    <tr>
-      <th>57</th>
-      <td>R04</td>
-      <td>Crank Angle Delta</td>
-      <td>5.8100</td>
-      <td>5.8100</td>
-    </tr>
-    <tr>
-      <th>58</th>
-      <td>R05</td>
-      <td>Crank Angle Delta</td>
-      <td>5.7800</td>
-      <td>5.7800</td>
-    </tr>
-    <tr>
-      <th>59</th>
-      <td>R06</td>
-      <td>Crank Angle Delta</td>
-      <td>5.8700</td>
-      <td>5.8700</td>
-    </tr>
-    <tr>
-      <th>60</th>
-      <td>R07</td>
-      <td>Crank Angle Delta</td>
-      <td>5.7200</td>
-      <td>5.7200</td>
-    </tr>
-    <tr>
-      <th>61</th>
-      <td>R08</td>
-      <td>Crank Angle Delta</td>
-      <td>5.7900</td>
-      <td>5.7900</td>
-    </tr>
-    <tr>
-      <th>62</th>
-      <td>R09</td>
-      <td>Crank Angle Delta</td>
-      <td>5.7800</td>
-      <td>5.7800</td>
-    </tr>
-    <tr>
-      <th>63</th>
-      <td>R10</td>
-      <td>Crank Angle Delta</td>
-      <td>6.1100</td>
-      <td>6.1100</td>
+      <td>0.07</td>
     </tr>
   </tbody>
 </table>
