--- a/CleanedByBR/DataSpikes.html
+++ b/CleanedByBR/DataSpikes.html
@@ -20,461 +20,461 @@
             <table border="1" class="dataframe mystyle">
   <thead>
     <tr style="text-align: center;">
-      <th></th>
       <th>Test Run</th>
       <th>Metric</th>
       <th>Valid Lap Recs</th>
       <th>Spikes Count</th>
+      <th>Freq (%)</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th>0</th>
       <td>R03</td>
       <td>Power</td>
       <td>22220</td>
       <td>107</td>
+      <td>0.48</td>
     </tr>
     <tr>
-      <th>1</th>
       <td>R04</td>
       <td>Power</td>
       <td>17780</td>
       <td>79</td>
+      <td>0.44</td>
     </tr>
     <tr>
-      <th>2</th>
       <td>R05</td>
       <td>Power</td>
       <td>17860</td>
       <td>75</td>
+      <td>0.42</td>
     </tr>
     <tr>
-      <th>3</th>
       <td>R06</td>
       <td>Power</td>
       <td>11020</td>
       <td>61</td>
+      <td>0.55</td>
     </tr>
     <tr>
-      <th>4</th>
       <td>R07</td>
       <td>Power</td>
       <td>9040</td>
       <td>45</td>
+      <td>0.50</td>
     </tr>
     <tr>
-      <th>5</th>
       <td>R08</td>
       <td>Power</td>
       <td>15620</td>
       <td>88</td>
+      <td>0.56</td>
     </tr>
     <tr>
-      <th>6</th>
       <td>R09</td>
       <td>Power</td>
       <td>13400</td>
       <td>49</td>
+      <td>0.37</td>
     </tr>
     <tr>
-      <th>7</th>
       <td>R10</td>
       <td>Power</td>
       <td>24800</td>
       <td>131</td>
+      <td>0.53</td>
     </tr>
     <tr>
-      <th>8</th>
       <td>R03</td>
       <td>Ground Speed</td>
       <td>22220</td>
       <td>78</td>
+      <td>0.35</td>
     </tr>
     <tr>
-      <th>9</th>
       <td>R04</td>
       <td>Ground Speed</td>
       <td>17780</td>
       <td>55</td>
+      <td>0.31</td>
     </tr>
     <tr>
-      <th>10</th>
       <td>R05</td>
       <td>Ground Speed</td>
       <td>17860</td>
       <td>59</td>
+      <td>0.33</td>
     </tr>
     <tr>
-      <th>11</th>
       <td>R06</td>
       <td>Ground Speed</td>
       <td>11020</td>
       <td>34</td>
+      <td>0.31</td>
     </tr>
     <tr>
-      <th>12</th>
       <td>R07</td>
       <td>Ground Speed</td>
       <td>9040</td>
       <td>33</td>
+      <td>0.37</td>
     </tr>
     <tr>
-      <th>13</th>
       <td>R08</td>
       <td>Ground Speed</td>
       <td>15620</td>
       <td>41</td>
+      <td>0.26</td>
     </tr>
     <tr>
-      <th>14</th>
       <td>R09</td>
       <td>Ground Speed</td>
       <td>13400</td>
       <td>52</td>
+      <td>0.39</td>
     </tr>
     <tr>
-      <th>15</th>
       <td>R10</td>
       <td>Ground Speed</td>
       <td>24800</td>
       <td>124</td>
+      <td>0.50</td>
     </tr>
     <tr>
-      <th>16</th>
       <td>R03</td>
       <td>Air Speed</td>
       <td>22220</td>
       <td>70</td>
+      <td>0.32</td>
     </tr>
     <tr>
-      <th>17</th>
       <td>R04</td>
       <td>Air Speed</td>
       <td>17780</td>
       <td>50</td>
+      <td>0.28</td>
     </tr>
     <tr>
-      <th>18</th>
       <td>R05</td>
       <td>Air Speed</td>
       <td>17860</td>
       <td>61</td>
+      <td>0.34</td>
     </tr>
     <tr>
-      <th>19</th>
       <td>R06</td>
       <td>Air Speed</td>
       <td>11020</td>
       <td>42</td>
+      <td>0.38</td>
     </tr>
     <tr>
-      <th>20</th>
       <td>R07</td>
       <td>Air Speed</td>
       <td>9040</td>
       <td>21</td>
+      <td>0.23</td>
     </tr>
     <tr>
-      <th>21</th>
       <td>R08</td>
       <td>Air Speed</td>
       <td>15620</td>
       <td>48</td>
+      <td>0.31</td>
     </tr>
     <tr>
-      <th>22</th>
       <td>R09</td>
       <td>Air Speed</td>
       <td>13400</td>
       <td>38</td>
+      <td>0.28</td>
     </tr>
     <tr>
-      <th>23</th>
       <td>R10</td>
       <td>Air Speed</td>
       <td>24800</td>
       <td>68</td>
+      <td>0.27</td>
     </tr>
     <tr>
-      <th>24</th>
       <td>R03</td>
       <td>Cadence</td>
       <td>22220</td>
       <td>49</td>
+      <td>0.22</td>
     </tr>
     <tr>
-      <th>25</th>
       <td>R04</td>
       <td>Cadence</td>
       <td>17780</td>
       <td>36</td>
+      <td>0.20</td>
     </tr>
     <tr>
-      <th>26</th>
       <td>R05</td>
       <td>Cadence</td>
       <td>17860</td>
       <td>48</td>
+      <td>0.27</td>
     </tr>
     <tr>
-      <th>27</th>
       <td>R06</td>
       <td>Cadence</td>
       <td>11020</td>
       <td>23</td>
+      <td>0.21</td>
     </tr>
     <tr>
-      <th>28</th>
       <td>R07</td>
       <td>Cadence</td>
       <td>9040</td>
       <td>27</td>
+      <td>0.30</td>
     </tr>
     <tr>
-      <th>29</th>
       <td>R08</td>
       <td>Cadence</td>
       <td>15620</td>
       <td>42</td>
+      <td>0.27</td>
     </tr>
     <tr>
-      <th>30</th>
       <td>R09</td>
       <td>Cadence</td>
       <td>13400</td>
       <td>28</td>
+      <td>0.21</td>
     </tr>
     <tr>
-      <th>31</th>
       <td>R10</td>
       <td>Cadence</td>
       <td>24800</td>
       <td>69</td>
+      <td>0.28</td>
     </tr>
     <tr>
-      <th>32</th>
       <td>R03</td>
       <td>CdA</td>
       <td>22220</td>
       <td>93</td>
+      <td>0.42</td>
     </tr>
     <tr>
-      <th>33</th>
       <td>R04</td>
       <td>CdA</td>
       <td>17780</td>
       <td>102</td>
+      <td>0.57</td>
     </tr>
     <tr>
-      <th>34</th>
       <td>R05</td>
       <td>CdA</td>
       <td>17860</td>
       <td>89</td>
+      <td>0.50</td>
     </tr>
     <tr>
-      <th>35</th>
       <td>R06</td>
       <td>CdA</td>
       <td>11020</td>
       <td>66</td>
+      <td>0.60</td>
     </tr>
     <tr>
-      <th>36</th>
       <td>R07</td>
       <td>CdA</td>
       <td>9040</td>
       <td>56</td>
+      <td>0.62</td>
     </tr>
     <tr>
-      <th>37</th>
       <td>R08</td>
       <td>CdA</td>
       <td>15620</td>
       <td>110</td>
+      <td>0.70</td>
     </tr>
     <tr>
-      <th>38</th>
       <td>R09</td>
       <td>CdA</td>
       <td>13400</td>
       <td>64</td>
+      <td>0.48</td>
     </tr>
     <tr>
-      <th>39</th>
       <td>R10</td>
       <td>CdA</td>
       <td>24800</td>
       <td>152</td>
+      <td>0.61</td>
     </tr>
     <tr>
-      <th>40</th>
       <td>R03</td>
       <td>Drag</td>
       <td>22220</td>
       <td>98</td>
+      <td>0.44</td>
     </tr>
     <tr>
-      <th>41</th>
       <td>R04</td>
       <td>Drag</td>
       <td>17780</td>
       <td>95</td>
+      <td>0.53</td>
     </tr>
     <tr>
-      <th>42</th>
       <td>R05</td>
       <td>Drag</td>
       <td>17860</td>
       <td>79</td>
+      <td>0.44</td>
     </tr>
     <tr>
-      <th>43</th>
       <td>R06</td>
       <td>Drag</td>
       <td>11020</td>
       <td>66</td>
+      <td>0.60</td>
     </tr>
     <tr>
-      <th>44</th>
       <td>R07</td>
       <td>Drag</td>
       <td>9040</td>
       <td>43</td>
+      <td>0.48</td>
     </tr>
     <tr>
-      <th>45</th>
       <td>R08</td>
       <td>Drag</td>
       <td>15620</td>
       <td>98</td>
+      <td>0.63</td>
     </tr>
     <tr>
-      <th>46</th>
       <td>R09</td>
       <td>Drag</td>
       <td>13400</td>
       <td>47</td>
+      <td>0.35</td>
     </tr>
     <tr>
-      <th>47</th>
       <td>R10</td>
       <td>Drag</td>
       <td>24800</td>
       <td>140</td>
+      <td>0.56</td>
     </tr>
     <tr>
-      <th>48</th>
       <td>R03</td>
       <td>Total Weight</td>
       <td>22220</td>
       <td>99</td>
+      <td>0.45</td>
     </tr>
     <tr>
-      <th>49</th>
       <td>R04</td>
       <td>Total Weight</td>
       <td>17780</td>
       <td>73</td>
+      <td>0.41</td>
     </tr>
     <tr>
-      <th>50</th>
       <td>R05</td>
       <td>Total Weight</td>
       <td>17860</td>
       <td>80</td>
+      <td>0.45</td>
     </tr>
     <tr>
-      <th>51</th>
       <td>R06</td>
       <td>Total Weight</td>
       <td>11020</td>
       <td>67</td>
+      <td>0.61</td>
     </tr>
     <tr>
-      <th>52</th>
       <td>R07</td>
       <td>Total Weight</td>
       <td>9040</td>
       <td>49</td>
+      <td>0.54</td>
     </tr>
     <tr>
-      <th>53</th>
       <td>R08</td>
       <td>Total Weight</td>
       <td>15620</td>
       <td>95</td>
+      <td>0.61</td>
     </tr>
     <tr>
-      <th>54</th>
       <td>R09</td>
       <td>Total Weight</td>
       <td>13400</td>
       <td>52</td>
+      <td>0.39</td>
     </tr>
     <tr>
-      <th>55</th>
       <td>R10</td>
       <td>Total Weight</td>
       <td>24800</td>
       <td>138</td>
+      <td>0.56</td>
     </tr>
     <tr>
-      <th>56</th>
       <td>R03</td>
       <td>Crank Angle Delta</td>
       <td>22220</td>
       <td>21</td>
+      <td>0.09</td>
     </tr>
     <tr>
-      <th>57</th>
       <td>R04</td>
       <td>Crank Angle Delta</td>
       <td>17780</td>
       <td>34</td>
+      <td>0.19</td>
     </tr>
     <tr>
-      <th>58</th>
       <td>R05</td>
       <td>Crank Angle Delta</td>
       <td>17860</td>
       <td>30</td>
+      <td>0.17</td>
     </tr>
     <tr>
-      <th>59</th>
       <td>R06</td>
       <td>Crank Angle Delta</td>
       <td>11020</td>
       <td>8</td>
+      <td>0.07</td>
     </tr>
     <tr>
-      <th>60</th>
       <td>R07</td>
       <td>Crank Angle Delta</td>
       <td>9040</td>
       <td>10</td>
+      <td>0.11</td>
     </tr>
     <tr>
-      <th>61</th>
       <td>R08</td>
       <td>Crank Angle Delta</td>
       <td>15620</td>
       <td>12</td>
+      <td>0.08</td>
     </tr>
     <tr>
-      <th>62</th>
       <td>R09</td>
       <td>Crank Angle Delta</td>
       <td>13400</td>
       <td>4</td>
+      <td>0.03</td>
     </tr>
     <tr>
-      <th>63</th>
       <td>R10</td>
       <td>Crank Angle Delta</td>
       <td>24800</td>
       <td>54</td>
+      <td>0.22</td>
     </tr>
   </tbody>
 </table>
