--- a/CleanedByBR/DataCleaned.html
+++ b/CleanedByBR/DataCleaned.html
@@ -2,7 +2,7 @@
     layout: page                   
     subheadline: Data Validation
     title: Data Cleaning Impact
-    teaser: Shown below is the impact of Cleaning the data of Outliers and Spikes
+    teaser: Shown below is the impact of Cleaning the data of Outliers and Spikes (valid Laps only)
     categories:
       - 
     tags:
