--- a/CleanedByBR/DataPeaks.html
+++ b/CleanedByBR/DataPeaks.html
@@ -2,7 +2,7 @@
     layout: page                   
     subheadline: Data Validation
     title: Data Outliers
-    teaser: Shown below are the number of data outliers detected for all test runs
+    teaser: Shown below are the number of data outliers detected for all test runs (valid Laps only)
     categories:
       - 
     tags:
