--- a/CleanedByBR/DataSpikes.html
+++ b/CleanedByBR/DataSpikes.html
@@ -2,7 +2,7 @@
     layout: page                   
     subheadline: Data Validation
     title: Data Spikes
-    teaser: Shown below are the number of data spikes detected for all test runs
+    teaser: Shown below are the number of data spikes detected for all test runs (valid Laps only)
     categories:
       - 
     tags:
@@ -31,450 +31,457 @@
     <tr>
       <td>R03</td>
       <td>Power</td>
-      <td>22220</td>
-      <td>107</td>
+      <td>22220.0</td>
+      <td>107.0</td>
       <td>0.48</td>
     </tr>
     <tr>
       <td>R04</td>
       <td>Power</td>
-      <td>17780</td>
-      <td>79</td>
+      <td>17780.0</td>
+      <td>79.0</td>
       <td>0.44</td>
     </tr>
     <tr>
       <td>R05</td>
       <td>Power</td>
-      <td>17860</td>
-      <td>75</td>
+      <td>17860.0</td>
+      <td>75.0</td>
       <td>0.42</td>
     </tr>
     <tr>
       <td>R06</td>
       <td>Power</td>
-      <td>11020</td>
-      <td>61</td>
+      <td>11020.0</td>
+      <td>61.0</td>
       <td>0.55</td>
     </tr>
     <tr>
       <td>R07</td>
       <td>Power</td>
-      <td>9040</td>
-      <td>45</td>
+      <td>9040.0</td>
+      <td>45.0</td>
       <td>0.50</td>
     </tr>
     <tr>
       <td>R08</td>
       <td>Power</td>
-      <td>15620</td>
-      <td>88</td>
+      <td>15620.0</td>
+      <td>88.0</td>
       <td>0.56</td>
     </tr>
     <tr>
       <td>R09</td>
       <td>Power</td>
-      <td>13400</td>
-      <td>49</td>
+      <td>13400.0</td>
+      <td>49.0</td>
       <td>0.37</td>
     </tr>
     <tr>
       <td>R10</td>
       <td>Power</td>
-      <td>24800</td>
-      <td>131</td>
+      <td>24800.0</td>
+      <td>131.0</td>
       <td>0.53</td>
     </tr>
     <tr>
       <td>R03</td>
       <td>Ground Speed</td>
-      <td>22220</td>
-      <td>78</td>
+      <td>22220.0</td>
+      <td>78.0</td>
       <td>0.35</td>
     </tr>
     <tr>
       <td>R04</td>
       <td>Ground Speed</td>
-      <td>17780</td>
-      <td>55</td>
+      <td>17780.0</td>
+      <td>55.0</td>
       <td>0.31</td>
     </tr>
     <tr>
       <td>R05</td>
       <td>Ground Speed</td>
-      <td>17860</td>
-      <td>59</td>
+      <td>17860.0</td>
+      <td>59.0</td>
       <td>0.33</td>
     </tr>
     <tr>
       <td>R06</td>
       <td>Ground Speed</td>
-      <td>11020</td>
-      <td>34</td>
+      <td>11020.0</td>
+      <td>34.0</td>
       <td>0.31</td>
     </tr>
     <tr>
       <td>R07</td>
       <td>Ground Speed</td>
-      <td>9040</td>
-      <td>33</td>
+      <td>9040.0</td>
+      <td>33.0</td>
       <td>0.37</td>
     </tr>
     <tr>
       <td>R08</td>
       <td>Ground Speed</td>
-      <td>15620</td>
-      <td>41</td>
+      <td>15620.0</td>
+      <td>41.0</td>
       <td>0.26</td>
     </tr>
     <tr>
       <td>R09</td>
       <td>Ground Speed</td>
-      <td>13400</td>
-      <td>52</td>
+      <td>13400.0</td>
+      <td>52.0</td>
       <td>0.39</td>
     </tr>
     <tr>
       <td>R10</td>
       <td>Ground Speed</td>
-      <td>24800</td>
-      <td>124</td>
+      <td>24800.0</td>
+      <td>124.0</td>
       <td>0.50</td>
     </tr>
     <tr>
       <td>R03</td>
       <td>Air Speed</td>
-      <td>22220</td>
-      <td>70</td>
+      <td>22220.0</td>
+      <td>70.0</td>
       <td>0.32</td>
     </tr>
     <tr>
       <td>R04</td>
       <td>Air Speed</td>
-      <td>17780</td>
-      <td>50</td>
+      <td>17780.0</td>
+      <td>50.0</td>
       <td>0.28</td>
     </tr>
     <tr>
       <td>R05</td>
       <td>Air Speed</td>
-      <td>17860</td>
-      <td>61</td>
+      <td>17860.0</td>
+      <td>61.0</td>
       <td>0.34</td>
     </tr>
     <tr>
       <td>R06</td>
       <td>Air Speed</td>
-      <td>11020</td>
-      <td>42</td>
+      <td>11020.0</td>
+      <td>42.0</td>
       <td>0.38</td>
     </tr>
     <tr>
       <td>R07</td>
       <td>Air Speed</td>
-      <td>9040</td>
-      <td>21</td>
+      <td>9040.0</td>
+      <td>21.0</td>
       <td>0.23</td>
     </tr>
     <tr>
       <td>R08</td>
       <td>Air Speed</td>
-      <td>15620</td>
-      <td>48</td>
+      <td>15620.0</td>
+      <td>48.0</td>
       <td>0.31</td>
     </tr>
     <tr>
       <td>R09</td>
       <td>Air Speed</td>
-      <td>13400</td>
-      <td>38</td>
+      <td>13400.0</td>
+      <td>38.0</td>
       <td>0.28</td>
     </tr>
     <tr>
       <td>R10</td>
       <td>Air Speed</td>
-      <td>24800</td>
-      <td>68</td>
+      <td>24800.0</td>
+      <td>68.0</td>
       <td>0.27</td>
     </tr>
     <tr>
       <td>R03</td>
       <td>Cadence</td>
-      <td>22220</td>
-      <td>49</td>
+      <td>22220.0</td>
+      <td>49.0</td>
       <td>0.22</td>
     </tr>
     <tr>
       <td>R04</td>
       <td>Cadence</td>
-      <td>17780</td>
-      <td>36</td>
+      <td>17780.0</td>
+      <td>36.0</td>
       <td>0.20</td>
     </tr>
     <tr>
       <td>R05</td>
       <td>Cadence</td>
-      <td>17860</td>
-      <td>48</td>
+      <td>17860.0</td>
+      <td>48.0</td>
       <td>0.27</td>
     </tr>
     <tr>
       <td>R06</td>
       <td>Cadence</td>
-      <td>11020</td>
-      <td>23</td>
+      <td>11020.0</td>
+      <td>23.0</td>
       <td>0.21</td>
     </tr>
     <tr>
       <td>R07</td>
       <td>Cadence</td>
-      <td>9040</td>
-      <td>27</td>
+      <td>9040.0</td>
+      <td>27.0</td>
       <td>0.30</td>
     </tr>
     <tr>
       <td>R08</td>
       <td>Cadence</td>
-      <td>15620</td>
-      <td>42</td>
+      <td>15620.0</td>
+      <td>42.0</td>
       <td>0.27</td>
     </tr>
     <tr>
       <td>R09</td>
       <td>Cadence</td>
-      <td>13400</td>
-      <td>28</td>
+      <td>13400.0</td>
+      <td>28.0</td>
       <td>0.21</td>
     </tr>
     <tr>
       <td>R10</td>
       <td>Cadence</td>
-      <td>24800</td>
-      <td>69</td>
+      <td>24800.0</td>
+      <td>69.0</td>
       <td>0.28</td>
     </tr>
     <tr>
       <td>R03</td>
       <td>CdA</td>
-      <td>22220</td>
-      <td>93</td>
+      <td>22220.0</td>
+      <td>93.0</td>
       <td>0.42</td>
     </tr>
     <tr>
       <td>R04</td>
       <td>CdA</td>
-      <td>17780</td>
-      <td>102</td>
+      <td>17780.0</td>
+      <td>102.0</td>
       <td>0.57</td>
     </tr>
     <tr>
       <td>R05</td>
       <td>CdA</td>
-      <td>17860</td>
-      <td>89</td>
+      <td>17860.0</td>
+      <td>89.0</td>
       <td>0.50</td>
     </tr>
     <tr>
       <td>R06</td>
       <td>CdA</td>
-      <td>11020</td>
-      <td>66</td>
+      <td>11020.0</td>
+      <td>66.0</td>
       <td>0.60</td>
     </tr>
     <tr>
       <td>R07</td>
       <td>CdA</td>
-      <td>9040</td>
-      <td>56</td>
+      <td>9040.0</td>
+      <td>56.0</td>
       <td>0.62</td>
     </tr>
     <tr>
       <td>R08</td>
       <td>CdA</td>
-      <td>15620</td>
-      <td>110</td>
+      <td>15620.0</td>
+      <td>110.0</td>
       <td>0.70</td>
     </tr>
     <tr>
       <td>R09</td>
       <td>CdA</td>
-      <td>13400</td>
-      <td>64</td>
+      <td>13400.0</td>
+      <td>64.0</td>
       <td>0.48</td>
     </tr>
     <tr>
       <td>R10</td>
       <td>CdA</td>
-      <td>24800</td>
-      <td>152</td>
+      <td>24800.0</td>
+      <td>152.0</td>
       <td>0.61</td>
     </tr>
     <tr>
       <td>R03</td>
       <td>Drag</td>
-      <td>22220</td>
-      <td>98</td>
+      <td>22220.0</td>
+      <td>98.0</td>
       <td>0.44</td>
     </tr>
     <tr>
       <td>R04</td>
       <td>Drag</td>
-      <td>17780</td>
-      <td>95</td>
+      <td>17780.0</td>
+      <td>95.0</td>
       <td>0.53</td>
     </tr>
     <tr>
       <td>R05</td>
       <td>Drag</td>
-      <td>17860</td>
-      <td>79</td>
+      <td>17860.0</td>
+      <td>79.0</td>
       <td>0.44</td>
     </tr>
     <tr>
       <td>R06</td>
       <td>Drag</td>
-      <td>11020</td>
-      <td>66</td>
+      <td>11020.0</td>
+      <td>66.0</td>
       <td>0.60</td>
     </tr>
     <tr>
       <td>R07</td>
       <td>Drag</td>
-      <td>9040</td>
-      <td>43</td>
+      <td>9040.0</td>
+      <td>43.0</td>
       <td>0.48</td>
     </tr>
     <tr>
       <td>R08</td>
       <td>Drag</td>
-      <td>15620</td>
-      <td>98</td>
+      <td>15620.0</td>
+      <td>98.0</td>
       <td>0.63</td>
     </tr>
     <tr>
       <td>R09</td>
       <td>Drag</td>
-      <td>13400</td>
-      <td>47</td>
+      <td>13400.0</td>
+      <td>47.0</td>
       <td>0.35</td>
     </tr>
     <tr>
       <td>R10</td>
       <td>Drag</td>
-      <td>24800</td>
-      <td>140</td>
+      <td>24800.0</td>
+      <td>140.0</td>
       <td>0.56</td>
     </tr>
     <tr>
       <td>R03</td>
       <td>Total Weight</td>
-      <td>22220</td>
-      <td>99</td>
+      <td>22220.0</td>
+      <td>99.0</td>
       <td>0.45</td>
     </tr>
     <tr>
       <td>R04</td>
       <td>Total Weight</td>
-      <td>17780</td>
-      <td>73</td>
+      <td>17780.0</td>
+      <td>73.0</td>
       <td>0.41</td>
     </tr>
     <tr>
       <td>R05</td>
       <td>Total Weight</td>
-      <td>17860</td>
-      <td>80</td>
+      <td>17860.0</td>
+      <td>80.0</td>
       <td>0.45</td>
     </tr>
     <tr>
       <td>R06</td>
       <td>Total Weight</td>
-      <td>11020</td>
-      <td>67</td>
+      <td>11020.0</td>
+      <td>67.0</td>
       <td>0.61</td>
     </tr>
     <tr>
       <td>R07</td>
       <td>Total Weight</td>
-      <td>9040</td>
-      <td>49</td>
+      <td>9040.0</td>
+      <td>49.0</td>
       <td>0.54</td>
     </tr>
     <tr>
       <td>R08</td>
       <td>Total Weight</td>
-      <td>15620</td>
-      <td>95</td>
+      <td>15620.0</td>
+      <td>95.0</td>
       <td>0.61</td>
     </tr>
     <tr>
       <td>R09</td>
       <td>Total Weight</td>
-      <td>13400</td>
-      <td>52</td>
+      <td>13400.0</td>
+      <td>52.0</td>
       <td>0.39</td>
     </tr>
     <tr>
       <td>R10</td>
       <td>Total Weight</td>
-      <td>24800</td>
-      <td>138</td>
+      <td>24800.0</td>
+      <td>138.0</td>
       <td>0.56</td>
     </tr>
     <tr>
       <td>R03</td>
       <td>Crank Angle Delta</td>
-      <td>22220</td>
-      <td>21</td>
+      <td>22220.0</td>
+      <td>21.0</td>
       <td>0.09</td>
     </tr>
     <tr>
       <td>R04</td>
       <td>Crank Angle Delta</td>
-      <td>17780</td>
-      <td>34</td>
+      <td>17780.0</td>
+      <td>34.0</td>
       <td>0.19</td>
     </tr>
     <tr>
       <td>R05</td>
       <td>Crank Angle Delta</td>
-      <td>17860</td>
-      <td>30</td>
+      <td>17860.0</td>
+      <td>30.0</td>
       <td>0.17</td>
     </tr>
     <tr>
       <td>R06</td>
       <td>Crank Angle Delta</td>
-      <td>11020</td>
-      <td>8</td>
+      <td>11020.0</td>
+      <td>8.0</td>
       <td>0.07</td>
     </tr>
     <tr>
       <td>R07</td>
       <td>Crank Angle Delta</td>
-      <td>9040</td>
-      <td>10</td>
+      <td>9040.0</td>
+      <td>10.0</td>
       <td>0.11</td>
     </tr>
     <tr>
       <td>R08</td>
       <td>Crank Angle Delta</td>
-      <td>15620</td>
-      <td>12</td>
+      <td>15620.0</td>
+      <td>12.0</td>
       <td>0.08</td>
     </tr>
     <tr>
       <td>R09</td>
       <td>Crank Angle Delta</td>
-      <td>13400</td>
-      <td>4</td>
+      <td>13400.0</td>
+      <td>4.0</td>
       <td>0.03</td>
     </tr>
     <tr>
       <td>R10</td>
       <td>Crank Angle Delta</td>
-      <td>24800</td>
-      <td>54</td>
+      <td>24800.0</td>
+      <td>54.0</td>
       <td>0.22</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td>1053920.0</td>
+      <td>4055.0</td>
+      <td>0.38</td>
     </tr>
   </tbody>
 </table>
