--- a/CleanedByBR/DataPeaks.html
+++ b/CleanedByBR/DataPeaks.html
@@ -28,10 +28,28 @@
   </thead>
   <tbody>
     <tr>
+      <td>R06</td>
+      <td>Power</td>
+      <td>16141</td>
+      <td>3</td>
+    </tr>
+    <tr>
       <td>R10</td>
       <td>Power</td>
       <td>24800</td>
-      <td>42</td>
+      <td>21</td>
+    </tr>
+    <tr>
+      <td>R06</td>
+      <td>Ground Speed</td>
+      <td>16141</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>R06</td>
+      <td>Cadence</td>
+      <td>16141</td>
+      <td>1</td>
     </tr>
     <tr>
       <td>R07</td>
@@ -46,6 +64,12 @@
       <td>3</td>
     </tr>
     <tr>
+      <td>R06</td>
+      <td>CdA</td>
+      <td>16141</td>
+      <td>10</td>
+    </tr>
+    <tr>
       <td>R10</td>
       <td>CdA</td>
       <td>24800</td>
@@ -56,6 +80,12 @@
       <td>Drag</td>
       <td>17780</td>
       <td>7</td>
+    </tr>
+    <tr>
+      <td>R06</td>
+      <td>Drag</td>
+      <td>16141</td>
+      <td>11</td>
     </tr>
     <tr>
       <td>R08</td>
@@ -76,6 +106,12 @@
       <td>7</td>
     </tr>
     <tr>
+      <td>R06</td>
+      <td>Total Weight</td>
+      <td>16141</td>
+      <td>6</td>
+    </tr>
+    <tr>
       <td>R04</td>
       <td>Crank Angular Velocity</td>
       <td>17780</td>
@@ -86,6 +122,12 @@
       <td>Crank Angular Velocity</td>
       <td>17860</td>
       <td>2</td>
+    </tr>
+    <tr>
+      <td>R06</td>
+      <td>Crank Angular Velocity</td>
+      <td>16141</td>
+      <td>66</td>
     </tr>
     <tr>
       <td>R10</td>
