--- a/CleanedByBR/DataCleaned.html
+++ b/CleanedByBR/DataCleaned.html
@@ -29,11 +29,18 @@
   </thead>
   <tbody>
     <tr>
+      <td>R06</td>
+      <td>Power</td>
+      <td>280.4300</td>
+      <td>283.3800</td>
+      <td>1.04</td>
+    </tr>
+    <tr>
       <td>R10</td>
       <td>Power</td>
       <td>264.0300</td>
-      <td>266.4100</td>
-      <td>0.89</td>
+      <td>264.4600</td>
+      <td>0.16</td>
     </tr>
     <tr>
       <td>R05</td>
@@ -45,9 +52,9 @@
     <tr>
       <td>R06</td>
       <td>Ground Speed</td>
-      <td>11.4300</td>
-      <td>11.4200</td>
-      <td>0.09</td>
+      <td>11.3800</td>
+      <td>11.3600</td>
+      <td>0.18</td>
     </tr>
     <tr>
       <td>R07</td>
@@ -55,6 +62,20 @@
       <td>11.1200</td>
       <td>11.1300</td>
       <td>0.09</td>
+    </tr>
+    <tr>
+      <td>R06</td>
+      <td>Cadence</td>
+      <td>94.2700</td>
+      <td>97.3800</td>
+      <td>3.19</td>
+    </tr>
+    <tr>
+      <td>R06</td>
+      <td>CdA</td>
+      <td>0.2203</td>
+      <td>0.1970</td>
+      <td>11.83</td>
     </tr>
     <tr>
       <td>R10</td>
@@ -71,6 +92,13 @@
       <td>0.07</td>
     </tr>
     <tr>
+      <td>R06</td>
+      <td>Drag</td>
+      <td>-16.4812</td>
+      <td>-14.7350</td>
+      <td>11.85</td>
+    </tr>
+    <tr>
       <td>R09</td>
       <td>Drag</td>
       <td>-15.4550</td>
@@ -83,6 +111,20 @@
       <td>-12.5491</td>
       <td>-12.5574</td>
       <td>0.07</td>
+    </tr>
+    <tr>
+      <td>R06</td>
+      <td>Total Weight</td>
+      <td>83010.2575</td>
+      <td>84664.5039</td>
+      <td>1.95</td>
+    </tr>
+    <tr>
+      <td>R06</td>
+      <td>Crank Angle Delta</td>
+      <td>5.6900</td>
+      <td>5.8500</td>
+      <td>2.74</td>
     </tr>
   </tbody>
 </table>
